Reunion (island) added and Burma removed (replaced with Myanmar) - CHANGED
Payment manager restrict description input count can affect video tab - FIXED
WPML exclude cats on map does not work for translations of categories - FIXED
Dummy data section improved and additional industries added - ADDED

v1.6.10
Search can fail if more than one CPT but one is empty - FIXED
Search with near field can fire before geolocation returned - FIXED
Sort by farthest not working, sorts by nearest - FIXED
Change enquiry email name if owned by admin or not claimed - CHANGED

v1.6.9
Tab custom field hook missing htmlvar variable - FIXED
Some CSS tweaks for gd-comma-list in tabs - CHANGED
linked place marker can sometime show on details page map of original place - FIXED
Changes for custom OpenStreetMap integration - CHANGED
Option added in Popular Category Widget to show parent categories only - ADDED
Video preview placeholder shown on preview page - CHANGED
Enable location filter option added for slider widget - ADDED
Changed for WPML not getting correct lang from url - FIXED
Predefined custom fields section added to place settings - ADDED
Search bar styles change (to use original GD>Design>Search>Use old non-styled form) - STYLE BREAKING CHANGE
Firefox marker title hover fails on multiple repeat hovers - FIXED
If multiple CPT but only one has posts then search CPT switcher will not show - CHANGED
$_SERVER['SERVER_NAME'] returns empty host with nginx server - FIXED
Flexslider RTL chrome 53 bug, slider not showing - FIXED
Chosen select RTL display bug - FIXED
Yoast SEO meta tags should add category default image in meta - ADDED
Lazyload images not loading if they have parentheses in the url (x) - FIXED
Price output settings added to numerical text custom fields - ADDED
Settings added to remove data on plugin uninstall - ADDED

v1.6.8
Address field output containd class post instead of post_address - FIXED
Video and special offers tabs can show twice - FIXED