@@ -13,6 +13,7 @@ Reunion (island) added and Burma removed (replaced with Myanmar) - CHANGED
 Payment manager restrict description input count can affect video tab - FIXED
 WPML exclude cats on map does not work for translations of categories - FIXED
 Dummy data section improved and additional industries added - ADDED
+On detail page current location parameters should be added to the term links - CHANGED
 
 v1.6.10
 Search can fail if more than one CPT but one is empty - FIXED
